# sovereign-pirtm

./: Cargo.toml  README.md
admissibility/include/: AdmissibilityValidator.h
admissibility/src/: AdmissibilityValidator.cpp
contractivity/include/: ContractivityReceipt.h
contractivity/src/: ContractivityReceipt.cpp
lean-ffi/include/: LeanFFI.h
lean-ffi/src/: LeanFFI.cpp
multiplicity/include/: MultiplicityFunctor.h
multiplicity/src/: MultiplicityFunctor.cpp
pirtm-llvm/include/: PirtmLowering.h
pirtm-llvm/src/: PirtmLowering.cpp
pirtm-mlir/include/pirtm/Dialect/: PirtmDialect.h  PirtmOps.td
sedona-spine/include/: SedonaSpine.h
sedona-spine/src/: SedonaSpine.cpp
src/: lib.rs
zeno-finton/include/: ZenoFinton.h
zeno-finton/src/: ZenoFinton.cpp
